# UMazeGame

./: .gitignore  CMakeLists.txt  README.md  build_win32_vs2019.bat
build_win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  maze.sln
build_win32/engine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build_win32/engine/Engine.dir/Debug/: Engine.lib.recipe
build_win32/engine/Engine.dir/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Engine.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_win32/engine/minikit/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MiniKit.sln  cmake_install.cmake
build_win32/engine/minikit/framework/: INSTALL.vcxproj  INSTALL.vcxproj.filters  MiniKit.Framework.vcxproj  MiniKit.Framework.vcxproj.filters  cmake_install.cmake
build_win32/engine/minikit/framework/Debug/: MiniKit.Framework.lib
build_win32/engine/minikit/framework/MiniKit.Framework.dir/Debug/MiniKit..A313CCFF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  MiniKit.Framework.lastbuildstate
build_win32/game/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  maze.vcxproj  maze.vcxproj.filters
build_win32/game/Debug/: imgui.ini  maze.exp  maze.lib
build_win32/game/Debug/assets/images/: pacman_main_macos.icns
build_win32/game/Debug/assets/images/map/: pacman_map.tmx
build_win32/game/maze.dir/Debug/: maze.exe.recipe  pacman_icon.res
build_win32/game/maze.dir/Debug/maze.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  maze.lastbuildstate  maze.write.1u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
build_win32/game/src/: EntityCS.vcxproj  EntityCS.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
build_win32/game/src/EntityCS.dir/Debug/EntityCS.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  EntityCS.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_win32/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_win32/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_win32/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
engine/: CMakeLists.txt
engine/src/Engine/EntityComponent/: Actor.hpp  Component.hpp  Object.hpp
engine/src/Engine/InputManager/: Buttons.cpp  Buttons.hpp  InputManager.cpp  InputManager.hpp
engine/src/Engine/MapManager/: MapManager.cpp  MapManager.hpp
engine/src/Engine/Scene/: Scene.cpp  Scene.hpp
engine/src/Engine/Sprite/: RectangleShape.cpp  RectangleShape.hpp  Sprite.cpp  Sprite.hpp
engine/src/Engine/TextureManager/: TextureManager.cpp  TextureManager.hpp
engine/src/Engine/Timer/: Timer.cpp  Timer.hpp
engine/src/Engine/ViewPort/: ViewPort.cpp  ViewPort.hpp
engine/src/Engine/World/: World.cpp  World.hpp
engine/src/FSM/: StateMachine.cc  StateMachine.hh
game/: CMakeLists.txt  main.cpp
game/assets/images/: pacman_icon.aps  pacman_icon.rc
game/src/: CMakeLists.txt
game/src/ECS/Components/: AIBehaviourMode.hpp  AIMovement.hpp  Animation.hpp  Bonus.hpp  Collision.hpp  Input.hpp  Item.hpp  Lives.hpp  MapTileRenderer.hpp  Movement.hpp  PlayerBehaviourMode.hpp  Score.hpp  Transform.hpp  TunnelPath.hpp
game/src/ECS/Events/: BehaviourEvent.hpp  CollectionEvent.hpp  CollisionEvent.hpp  GameOverEvent.hpp  LivesEvent.hpp  TargetingEvent.hpp
game/src/ECS/Systems/: AIMovementSystem.cpp  AIMovementSystem.hpp  BehaviourSystem.cpp  BehaviourSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  ItemsCollectionSystem.cpp  ItemsCollectionSystem.hpp  LevelControlSystem.cpp  LevelControlSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PlayerInputControlSystem.cpp  PlayerInputControlSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
game/src/Game/: Game.cpp  Game.hpp
game/src/GameHUDView/: GameHUDView.cpp  GameHUDView.hpp
game/src/Ghosts/: PinkPinky.cpp  PinkPinky.hpp  RedBlinky.cpp  RedBlinky.hpp
game/src/Levels/: FirstLevel.cpp  FirstLevel.hpp  SecondLevel.cpp  SecondLevel.hpp
game/src/Map/: Map.cpp  Map.hpp
game/src/Menu/: Menu.cpp  Menu.hpp
game/src/Pacman/: Pacman.cpp  Pacman.hpp
game/src/Pathfinder/: AStar.cpp  AStar.hpp
game/src/Score/: Score.cpp  Score.hpp
